package com.novaperutech.veyra.platform.iam.domain.model.valueobjects;

/**
 * Roles
 * <p>
 *     This enum represents the roles in the system.
 * </p>
 */
public enum Roles {
    /** The user role. */
    ROLE_USER,
    /** The admin role. */
    ROLE_ADMIN,
    /** The instructor role. */
    ROLE_FAMILIAR,
}
