@startuml
title Bounded Context: IAM

entity "users" as users {
  * id : BIGINT
  --
  created_at : DATETIME(6)
  updated_at : DATETIME(6)
  password   : VARCHAR(120)
  username   : VARCHAR(50)
}

entity "roles" as roles {
  * id : BIGINT
  --
  name : ENUM(...)
}

entity "user_roles" as user_roles {
  * user_id : BIGINT
  * role_id : BIGINT
}

' Relaciones muchos-a-muchos entre users y roles
users ||--o{ user_roles : "1..*"
roles ||--o{ user_roles : "1..*"

@enduml
